--- a/MyHome-eclipse/AndroidManifest.xml
+++ b/MyHome-eclipse/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wzd.myhome"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -24,6 +24,9 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <!-- 可选 -->
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <!-- 获取logcat日志 -->
 
     <application
         android:name="com.wzd.myhome.service.CrashApplication"
@@ -31,6 +34,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="PGYER_APPID"
+            android:value="ef901cab9c8abbf452abec4ccfffa81c" >
+        </meta-data>
+
         <activity
             android:name="com.wzd.myhome.activity.SplashActivity"
             android:label="@string/app_name" >
